--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,8 @@
 
 :root{
     --title_color : #e53170;
-    --bgr_color : #e53170;
+    --bgr_color : #0e0e0e;
     --address_color : #5cc6e6;
 
 }
+
