--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* general */
 *{
     margin: 0;
     padding: 0;
@@ -11,3 +12,21 @@
 
 }
 
+body{
+    background-color: var(--bgr_color);
+    font-family: 'Anuphan', sans-serif;
+    font-family: 'Fredoka', sans-serif;
+}
+
+.container{
+    max-width: 80%;
+    margin: 10%;
+    background-color: white;
+    text-align: center;
+    padding-top: 2rem;
+}
+
+h1{
+    color: var(--title_color);
+    font-size: 3rem;
+}
