--- a/css/style.css
+++ b/css/style.css
@@ -21,12 +21,19 @@ body{
 .container{
     max-width: 80%;
     margin: 10%;
+    padding: 6%;
     background-color: white;
     text-align: center;
     padding-top: 2rem;
 }
 
+/* header */
 h1{
     color: var(--title_color);
     font-size: 3rem;
+    margin: 2rem;
+}
+
+p{font-size: 1.5rem;
+
 }
