--- a/css/style.css
+++ b/css/style.css
@@ -43,6 +43,12 @@ h1{
 p{font-size: 1.5rem;
 }
 
+/* main */
+.row{
+    display: inline-block;
+    width: calc(100% /3);
+}
+
 .pic_team{
     width: 6rem;
     float: left;
@@ -59,4 +65,6 @@ a{
     color: white;
     text-align: left;
     font-size: 1.5rem;
+    float: left;
+    display: inline-block;
 }
