--- a/css/style.css
+++ b/css/style.css
@@ -40,13 +40,15 @@ h1{
     margin: 2rem;
 }
 
-p{font-size: 1.5rem;
+p{
+    font-size: 1.1rem;
 }
 
 /* main */
 .row{
     display: inline-block;
-    width: calc(100% /3);
+    width: 100% ;
+    margin-top: 2rem;
 }
 
 .pic_team{
@@ -64,7 +66,12 @@ a{
     background-color: black;
     color: white;
     text-align: left;
-    font-size: 1.5rem;
-    float: left;
+    width: calc((100% / 3) - 1.5rem);
+    margin: 0.5rem;
     display: inline-block;
+    float: left;
+}
+
+.info_team{
+    margin-top: 1rem;
 }
