--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,8 @@ body{
 
 .container{
     max-width: 80%;
-    margin: 10%;
-    padding: 6%;
+    margin: 5% auto;
+    padding: 10%;
     background-color: white;
     text-align: center;
     padding-top: 2rem;
@@ -42,13 +42,14 @@ h1{
 
 p{
     font-size: 1.1rem;
+
 }
 
 /* main */
 .row{
     display: inline-block;
     width: 100% ;
-    margin-top: 2rem;
+    margin-top: 0.2rem;
 }
 
 .pic_team{
