--- a/css/style.css
+++ b/css/style.css
@@ -42,10 +42,13 @@ h1{
 
 p{
     font-size: 1.1rem;
-
 }
 
 /* main */
+.main_description{
+    margin-bottom: 2rem;
+}
+
 .row{
     display: inline-block;
     width: 100% ;
